# stride

./: .gitignore  .travis.yml  .travis.yml_old  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeLocal.cmake  CMakeReport.cmake  Makefile  README.md
Arch_prototypes/simulator_visualiser_prototype/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  open_simulation_result.qrc  simulator_visualiser_prototype.pro
Impact features/: Report.tex
Impact features/Demographic/: stat_calc.py
Impact features/Workplace/: workplace_sizes_ncpd.eps
Presentation/: presentation.nav  presentation.odp  presentation.tex
Projectverslag/: Verslag.tex  dataformats_projectverslag.txt  datavis_projectverslag.txt  datavis_projectverslag_indeling.txt  daycare_preschool_verslag.txt  epioutput_verslag.txt  workplace_size_distribution_verslag.txt
Report/: Hist.eps  ImmLvl.eps  R0_detail_30runs.eps  Report.tex  cases_cum.eps  cases_per_day.eps  vaccinating_cases_per_day_20runs.eps
Report/2_1_regionDiff_files/: regionA_stan_r0=11_VC=0.8_SR=0.00000167_cnt=100_days=500_CUMULATIVE.eps  regionA_stan_r0=11_VC=0.8_SR=0.00000167_cnt=100_days=500_FINALDAY_HIST.eps  regionA_stan_r0=11_VC=0.8_SR=0.00000167_cnt=500_days=500_CUMULATIVE.eps  regionA_stan_r0=11_VC=0.8_SR=0.00000167_cnt=500_days=500_FINALDAY_HIST.eps  regionA_stan_r0=11_VC=0.8_SR=0.002_cnt=100_days=500_CUMULATIVE.eps  regionB_stan_r0=11_VC=0.8_SR=0.00000167_cnt=100_days=500_CUMULATIVE.eps  regionB_stan_r0=11_VC=0.8_SR=0.00000167_cnt=100_days=500_FINALDAY_HIST.eps  regionB_stan_r0=11_VC=0.8_SR=0.00000167_cnt=500_days=500_CUMULATIVE.eps  regionB_stan_r0=11_VC=0.8_SR=0.00000167_cnt=500_days=500_FINALDAY_HIST.eps  regionB_stan_r0=11_VC=0.8_SR=0.002_cnt=100_days=500_CUMULATIVE.eps
Scripts/1_4_est_R0/: 1_4_estimate_R0.py
Scripts/2_1_RegionDiff/: plots.py  run_popB.xml
Scripts/2_2_Vaccinating/: 2_2_vacinating_on_campus.py
Scripts/2_3_Commuting_to_work/: plots.py  pop10000frac0.0.csv  pop10000frac0.1.csv  pop10000frac0.5.csv  pop10000frac1.0.csv  pop500000frac0.0.csv  pop500000frac0.5.csv  pop50000frac0.0.csv
Scripts/3_Performane_profiling/: bench.sh  plot.py
Simulatie Belgie/: Report.tex
Simulatie Belgie/Belgie/: AVG_SR=0.00000167.eps  AVG_SR=02.eps  Belgie_1000sim_300day_SR=0.002.csv  HIST_FILTER91K_SR=0.00000167.eps  HIST_SR=0.00000167.eps  HIST_SR=02.eps  Stat_intervals.txt
Simulatie Belgie/Vlaanderen/: AVG_SR=0.00000167.eps  AVG_SR=02.eps  HIST_FILTER87K_SR=0.00000167.eps  HIST_SR=02.eps  Stat_intervals.txt  Vlaanderen_1000sim_300day_SR=0.002.csv  stat_calc.py
Simulatie Opdracht/Report/: 3_GProf_contactlogmode.eps  3_GProf_numdays.eps  3_GProf_popsize.eps  Boxplot.eps  EvaluatieNotes.md  (+10 more)
docs/: documentatieplan.md  final_presentation.md  impact_1.md  index.md  simulation.md  simulation_1.md  simulation_belgium.md  testplan.md
main/resources/lib/: CMakeLists.txt
main/resources/lib/hdf5/: CMakeLists.txt
main/resources/lib/hdf5/c++/src/: H5Exception.cpp  H5Exception.h
main/resources/lib/hdf5/libhdf5/src/: H5Edefin.h  H5Einit.h  H5Epubgen.h  H5Eterm.h
main/resources/lib/hdf5/src/: H5Edefin.h  H5Einit.h  H5Epubgen.h  H5Eterm.h
simulatie_opdracht/: 1_3_estimate_immunity.py
(+1360 files in other folders)
